--- a/css/mutual.css
+++ b/css/mutual.css
@@ -7,8 +7,10 @@ RØD: #F20707
 
 /* FONTE */
 /* LOGO FONT*/
-font-family: stix-two-math, serif;
-font-weight: 400;
-font-style: normal;
+body {
+  font-family: stix-two-math, serif;
+  font-weight: 400;
+  font-style: normal;
+}
 
 /*IMAGES*/
