--- a/css/mutual.css
+++ b/css/mutual.css
@@ -11,6 +11,7 @@ body {
   font-family: stix-two-math, serif;
   font-weight: 400;
   font-style: normal;
+  background-color: #fffacd;
 }
 
 /*IMAGES*/
