--- a/css/mutual.css
+++ b/css/mutual.css
@@ -1,8 +1,8 @@
 /* Farver 
-Lyserød: #F8D5F5
+Lyserød: #F5e5f4
 Gul: #FFFACD
-BLÅ: #415972
-RØD: #F20707
+BLÅ: #004775
+RØD: #c1181c
 */
 
 /* FONTE */
