--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -1,4 +1,32 @@
+.kager {
+    text-align: center;
+}
+
+.mini_kager {
+    background-color:#FCE0F9;
+}
+
 .grid_1-1-1-1-1 {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+}
+
+.form_1  {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 50%;
+}
+
+.form_2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 50%
+}
+
+#emne {
+    width: 38%;
+}
+
+#besked {
+    width: 38%;
 }
