--- a/kopier herfra/footer.css
+++ b/kopier herfra/footer.css
@@ -1,6 +1,7 @@
 /* Footer */
 footer {
   background-color: #fce0f9;
+  padding: 20px;
   font-size: 15px;
   color: #c1181c;
   font-family: "Poppins_Regular", sans-serif;
@@ -9,4 +10,8 @@ h5 {
   font-size: 20px;
   color: #c1181c;
   font-family: "Poppins_Regular", sans-serif;
+}
+.grid_1_1_1_1 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
