--- a/css/mutual.css
+++ b/css/mutual.css
@@ -8,16 +8,19 @@ RØD: #C1181C
   margin: 0;
   box-sizing: border-box;
 }
-img {
-  width: 100%;
-  height: auto;
-  display: block;
-}
 main {
   max-width: 1000px;
   margin-inline: auto;
 }
 
+/*IMAGES*/
+img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+/* Logo */
 .logo {
   width: 30%;
   margin: 30px;
@@ -72,11 +75,4 @@ body {
   font-weight: 400;
   font-style: normal;
   background-color: #fffacd;
-}
-
-/*IMAGES*/
-
-/* Footer */
-footer {
-  background-color: #fce0f9;
 }
