--- a/css/mutual.css
+++ b/css/mutual.css
@@ -8,7 +8,7 @@ RØD: #C1181C
   margin: 0;
   box-sizing: border-box;
 }
-main {
+main :not(.om_os) {
   max-width: 1000px;
   margin-inline: auto;
 }
