--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -7,12 +7,12 @@
     grid-template-columns: repeat(2, 1fr);
 }
 
-h4 {
+.overskrift_storkage {
     text-align: center;
     margin: 30px;
 }
 
-.pris {
+.pris_2 {
     text-align: center;
     margin: 30px;
 }
@@ -25,7 +25,7 @@ h1, h2, h3, p {
     margin: 20px;
 }
 
-.tekst {
+.tekst_storkage {
     padding-left: 20px;
     line-height: 30px;
 }
@@ -34,6 +34,3 @@ h1, h2, h3, p {
     width: 50%;
 }
 
-.top {
-    text-align: center;
-}
