--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -11,6 +11,10 @@
     grid-template-columns: repeat(2, 1fr);
 }
 
+.overskrift_minikager {
+    text-align: start;
+}
+
 .overskrift_storkage {
     text-align: center;
     margin: 30px;
@@ -25,7 +29,7 @@ img {
     margin: 30px;
 }
 
-h1, h2, h3, p {
+h1, h2, h3, p, h4 {
     margin: 20px;
 }
 
