--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -1,14 +1,28 @@
-.grid_butikker {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 10px;
-  place-items: center;
-}
-
 .grid_kontakt {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 10px;
+  gap: 20px;
+  margin-inline: 2%;
+  margin-bottom: 40px;
+}
+
+.grid_kontakt a {
+  place-content: start;
+  display: block;
+  padding-block: 10px;
+  font-size: 25px;
+  color: black;
+  text-decoration: none;
+  font-family: "Poppins_Regular", sans-serif;
+}
+
+.grid_kontakt p {
+  color: black;
+}
+.grid_kontakt h3 {
+  color: black;
+  font-size: 30px;
+  padding-bottom: 5px;
 }
 
 h2 {
@@ -20,19 +34,63 @@ h2 {
 .grid_job {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 40px;
+  gap: 30px;
+  background-color: #f5e5f4;
+  padding-left: 10%;
+  padding-top: 5%;
+}
+
+.grid_job img {
+  width: 70%;
+  height: 70%;
+  border-radius: 50%;
+}
+
+.grid_job p {
+  padding: 20px 40px 10px 20px;
+  color: black;
+}
+
+.grid_job h2 {
+  color: black;
+}
+
+.grid_job a {
+  font-size: 25px;
+  color: black;
+  font-family: "Poppins_Medium", sans-serif;
+}
+
+.grid_butikker {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+  place-items: center;
+}
+
+section .grid_butikker {
+  padding: 60px 0px 60px 0px;
 }
 
 .grid_forhandlere {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 10px;
+  margin: 10px 30px 60px 30px;
 }
 
-section .grid_job {
+.grid_forhandlere .boks {
   background-color: #f5e5f4;
+  padding: 20px 20px 120px 20px;
 }
 
-section .grid_butikker {
-  padding: 60px 0px 60px 0px;
+.grid_forhandlere p {
+  padding-block: 8px;
+  padding-inline-start: 10px;
+}
+
+.grid_forhandlere h3 {
+  font-size: 30px;
+  padding-block: 30px;
+  padding-inline-start: 10px;
 }
