--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -46,19 +46,31 @@ h1, h2, h3, p, h4 {
     background-color: #FCE0F9;
 }
 
-input  {
+.form_1 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.form_2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+/*input  {
     color: #C1181C; 
     width: 50%;
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    border: none;
     background-color: #FCE0F9;  
+    border-bottom: 10px #C1181C;
 }
 
 select {
-    width: 100%;
-    padding: 10px;
-    border-radius: 10px;
-    background-color: #FCE0F9;
-}
+    color: #C1181C; 
+    width: 50%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    background-color:  #FCE0F9;
+}*/
