--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -29,7 +29,7 @@ img {
     margin: 30px;
 }
 
-h1, h2, h3, p, h4 {
+h1, h2, h3, p, h4, h5  {
     margin: 20px;
 }
 
@@ -46,7 +46,7 @@ h1, h2, h3, p, h4 {
     background-color: #FCE0F9;
 }
 
-.form_1 {
+/*.form_1 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
@@ -54,9 +54,15 @@ h1, h2, h3, p, h4 {
 .form_2 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+}*/
+
+form {
+    width: 100%;
+    padding: 10px;
+
 }
 
-/*input  {
+input  {
     color: #C1181C; 
     width: 50%;
     padding: 12px 20px;
@@ -73,4 +79,8 @@ select {
     margin: 8px 0;
     box-sizing: border-box;
     background-color:  #FCE0F9;
-}*/
+}
+
+#emne {
+    width: 100%;
+}
