--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -29,7 +29,7 @@ img {
     margin: 30px;
 }
 
-h1, h2, h3, p, h4, h5  {
+h1, h2, h3, p, h4, h5, a  {
     margin: 20px;
 }
 
@@ -49,6 +49,12 @@ h1, h2, h3, p, h4, h5  {
 .form_1 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    justify-items: start;
+}
+.form_1 > div:nth-child(1){
+
+    place-self: start;
+    text-align: start;
 }
 
 .form_2 {
@@ -59,6 +65,7 @@ h1, h2, h3, p, h4, h5  {
 form {
     width: 100%;
     padding: 10px;
+    align-content: flex-start;
 
 }
 
