--- a/css/mutual.css
+++ b/css/mutual.css
@@ -8,10 +8,15 @@ RØD: #C1181C
   margin: 0;
   box-sizing: border-box;
 }
-main :not(.om_os, .mini_kager, .bestil_vare) {
+ main :not(.om_os, .mini_kager, .bestil_vare, .form_1 > div:nth-child(1) ) {
   max-width: 1000px;
   margin-inline: auto;
-}
+} 
+
+/*main  {
+  max-width: 1000px;
+  margin-inline: auto;
+}*/
 
 /*IMAGES*/
 img {
