--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -12,7 +12,7 @@
   place-content: start;
   display: block;
   padding-block: 10px;
-  font-size: 25px;
+  font-size: 20px;
   color: black;
   text-decoration: none;
   font-family: "Poppins_Regular", sans-serif;
@@ -20,6 +20,8 @@
 
 .grid_kontakt p {
   color: black;
+  padding-top: 10px;
+  font-size: 20px;
 }
 .grid_kontakt h3 {
   color: black;
