--- a/css/forside.css
+++ b/css/forside.css
@@ -5,13 +5,15 @@
 .usp {
   border: 2px solid #c1181c;
 }
+
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+  gap: 30px;
+  padding-bottom: 30px;
 }
 .gallery img {
-  height: 70%;
+  height: 100%;
   width: 100%;
   object-fit: cover;
 }
@@ -24,4 +26,17 @@ img,
 p,
 h2 {
   grid-area: 1/1;
+}
+.thumbnail {
+  top: -50px;
+  left: -35px;
+  display: block;
+  z-index: 999;
+  cursor: pointer;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease;
+}
+.thumbnail:hover {
+  transform: scale(1.1);
 }
