--- a/css/forside.css
+++ b/css/forside.css
@@ -4,6 +4,8 @@
 }
 .usp {
   border: 2px solid #c1181c;
+  padding: 10px;
+  text-align: center;
 }
 
 .gallery {
@@ -22,21 +24,44 @@
   display: grid;
   place-items: center;
 }
-img,
-p,
-h2 {
+.container img,
+.container p,
+.container h2 {
   grid-area: 1/1;
+  transition: 0.3s;
 }
+
+.container p {
+  opacity: 0;
+  z-index: 3;
+}
+.container img {
+  opacity: 85%;
+}
+.container h2 {
+  z-index: 3;
+}
+/*
 .thumbnail {
   top: -50px;
   left: -35px;
   display: block;
   z-index: 999;
   cursor: pointer;
-  -webkit-transition-property: all;
-  -webkit-transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease;
 }
 .thumbnail:hover {
   transform: scale(1.1);
+}
+*/
+
+.container:hover h2 {
+  opacity: 0;
+}
+.container:hover p {
+  opacity: 1;
+}
+
+.container:hover img {
+  transform: scale(1.1);
+  opacity: 50%;
 }
