--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -28,9 +28,10 @@
   padding-bottom: 5px;
 }
 
-section h2 {
+.section1 h2 {
   display: flex;
   place-content: center;
+  color: black;
   margin-block: 40px;
 }
 
@@ -40,19 +41,20 @@ section h2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
-  background-color: #f5e5f4;
+  background-color: #fce0f9;
   padding-left: 10%;
   padding-top: 5%;
+  padding-bottom: 5%;
 }
 
 .grid_job img {
-  width: 70%;
-  height: 70%;
+  width: 80%;
+  height: 80%;
   border-radius: 50%;
 }
 
 .grid_job p {
-  padding: 20px 40px 10px 20px;
+  padding: 20px 40px 10px 0px;
   color: black;
 }
 
@@ -61,7 +63,7 @@ section h2 {
 }
 
 .grid_job a {
-  font-size: 25px;
+  font-size: 20px;
   color: black;
   font-family: "Poppins_Medium", sans-serif;
 }
@@ -83,12 +85,18 @@ section .grid_butikker {
 
 .flex_forhandlere {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
-  margin: 10px 30px 60px 30px;
+  margin: 10px 0px 60px 0px;
 }
 
 .flex_forhandlere .boks {
-  background-color: #f5e5f4;
+  width: 280px;
+  aspect-ratio: 1/1;
+}
+
+.flex_forhandlere .boks {
+  background-color: #fce0f9;
   padding: 20px 20px 120px 20px;
 }
 
