--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -41,20 +41,22 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
-  background-color: #fce0f9;
-  padding-left: 10%;
-  padding-top: 5%;
-  padding-bottom: 5%;
+  padding-top: 80px;
 }
 
-.grid_job img {
-  width: 80%;
-  height: 80%;
+.section2 {
+  background-color: #fce0f9;
+}
+
+.section2 img {
+  width: 90%;
+  height: 60%;
   border-radius: 50%;
+  margin: 0;
 }
 
 .grid_job p {
-  padding: 20px 40px 10px 0px;
+  padding: 30px 40px 0px 0px;
   color: black;
 }
 
