--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -1,38 +1,46 @@
 /*kontakt section*/
 
-.grid_kontakt {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
+.flex_kontakt {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.flex_kontakt .boks {
+  width: 300px;
+  aspect-ratio: 1/1;
+  border-left: solid #c1181c;
   margin-bottom: 40px;
 }
 
-.grid_kontakt a {
+.flex_kontakt a {
   place-content: start;
   display: block;
   padding-block: 10px;
+  padding: 10px 0px 10px 10px;
   font-size: 20px;
   color: black;
   text-decoration: none;
   font-family: "Poppins_Regular", sans-serif;
 }
 
-.grid_kontakt p {
+.flex_kontakt p {
   color: black;
-  padding-top: 10px;
+  padding: 10px 10px 0px 10px;
+
   font-size: 20px;
 }
-.grid_kontakt h3 {
+
+.flex_kontakt h3 {
   color: black;
   font-size: 30px;
-  padding-bottom: 5px;
+  padding: 0px 0px 5px 10px;
 }
 
 .section1 h2 {
   display: flex;
   place-content: center;
   color: black;
-  margin-block: 40px;
+  padding-block: 5%;
 }
 
 /*Bagt family section*/
@@ -40,8 +48,12 @@
 .grid_job {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 30px;
-  padding-top: 80px;
+  gap: 60px;
+  padding-block: 60px;
+}
+
+.grid_job .boks {
+  padding-left: 50px;
 }
 
 .section2 {
@@ -49,38 +61,48 @@
 }
 
 .section2 img {
-  width: 90%;
-  height: 60%;
+  object-fit: cover;
+  aspect-ratio: 1/1;
   border-radius: 50%;
-  margin: 0;
+  padding-inline: 20px;
 }
 
 .grid_job p {
-  padding: 30px 40px 0px 0px;
+  padding-top: 30px;
   color: black;
 }
 
 .grid_job h2 {
+  padding-top: 70px;
   color: black;
+}
+
+.strong {
+  font-weight: bold;
+  text-align: center;
 }
 
 .grid_job a {
   font-size: 20px;
   color: black;
+  text-decoration: none;
   font-family: "Poppins_Medium", sans-serif;
 }
 
 /*Butikker section*/
+
+.section3 h2 {
+  display: flex;
+  place-content: center;
+  padding-top: 10%;
+  padding-bottom: 5%;
+}
 
 .grid_butikker {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
   place-items: center;
-}
-
-section .grid_butikker {
-  padding: 60px 0px 60px 0px;
 }
 
 /*Forhandlere section*/
@@ -105,6 +127,13 @@ section .grid_butikker {
 .flex_forhandlere p {
   padding-block: 8px;
   padding-inline-start: 10px;
+}
+
+.section4 h2 {
+  display: flex;
+  place-content: center;
+  padding-top: 10%;
+  padding-bottom: 5%;
 }
 
 .flex_forhandlere h3 {
