--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -55,55 +55,41 @@ input:focus{
   background-color: #fce0f9;
 }
 
-/*.form_1 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  justify-items: start;
-}*/
-.form_1 > div:nth-child(1),
-.form_1 > div:nth-child(2) {
-  place-self: start;
-  text-align: start;
-}
-
-/*.form_2 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  justify-items: start;
-}*/
-
-.form_2 > div:nth-child(1),
-div.form_felt:nth-child(2) {
-  place-self: start;
-  text-align: start;
-}
-
 form {
   width: 100%;
   padding: 10px;
   align-content: flex-start;
 }
 
+.form-felt-1 {
+    place-self: start;
+    text-align: start
+    
+}
+
+.form-felt-2 {
+    place-self: start;
+    text-align: start;
+}
+
 input {
-    width: 50%;
+    width: 100%;
   border: solid #fce0f9;
   padding: 12px 0;
   background-color: #fffacd;
-  border-width: 5px;
+  border: 5px solid #fce0f9; 
 }
 
 select {
   color: #c1181c;
-  width: 25%;
+  width: 100%;
   padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
   background-color: #fffacd;
   border: 5px solid #fce0f9;
 }
 
 #emne {
-  width: 50%;
+  width: 100%;
 }
 
 #besked {
@@ -121,4 +107,9 @@ label {
   font-size: 15px;
   color: #c1181c;
   font-family: "Poppins_Regular", sans-serif;
+}
+
+.grid_1-2 {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
 }
