--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -1,3 +1,19 @@
+main,
+.full {
+  display: grid;
+  grid-template-columns: 1fr minmax(0, 1200px) 1fr;
+}
+
+.full {
+  grid-column: 1/-1;
+}
+
+main > *,
+.full > * {
+  /* main > *, .full > * */
+  grid-column: 2/3;
+}
+
 /*kontakt section*/
 
 .flex_kontakt {
@@ -9,7 +25,7 @@
   width: 300px;
   aspect-ratio: 1/1;
   border-left: solid #c1181c;
-  margin-bottom: 40px;
+  margin-bottom: 50px;
 }
 
 .flex_kontakt a {
@@ -48,7 +64,7 @@
 .grid_job {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 60px;
+  gap: 10px;
   padding-block: 60px;
 }
 
@@ -58,6 +74,7 @@
 
 .section2 {
   background-color: #fce0f9;
+  padding: 30px;
 }
 
 .section2 img {
