--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -1,3 +1,8 @@
+.top_pic {
+  width: 75%;
+  margin-left: 190px;
+}
+
 .top {
   text-align: center;
 }
@@ -6,10 +11,16 @@
   background-color: #fce0f9;
 }
 
-.grid_1-1 {
+.store_kager {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  max-width: 1100px;
+  margin-inline: auto;
 }
+/*.grid_1-1 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}*/
 
 .overskrift_minikager {
   text-align: start;
@@ -32,16 +43,26 @@ img {
 h1,
 h2,
 h3,
-p,
 h4,
+p,
 h5,
 a {
-  margin: 20px;
+  
+  max-width: 1100px;
+  margin-inline: auto;
+  
 }
+
 
 .tekst_storkage {
   padding-left: 20px;
   line-height: 30px;
+}
+
+.butikker {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  text-align: center;
 }
 
 input:focus{
