--- a/css/forside.css
+++ b/css/forside.css
@@ -16,18 +16,30 @@ main > *,
 }
 
 section {
+  margin-bottom: var(--space-lg);
+}
+section h2 {
   margin-bottom: var(--space-md);
 }
-
 .om_os {
   background-color: var(--tertiary);
-  padding: var(--space-xl);
+  padding: var(--space-sm);
 }
 .usp {
   border: 2px solid var(--brand_color);
   padding: var(--space-md);
   text-align: center;
   border-inline: 0;
+}
+
+.grid_1-2 {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: var(--space-sm);
+}
+.grid_1-2 img {
+  height: 100%;
+  width: 70%;
 }
 
 /* Åbningstider */
