--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -26,6 +26,13 @@
   text-align: start;
 }
 
+.minikager_1-1 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  max-width: 1100px;
+  margin-inline: auto;
+}
+
 .overskrift_storkage {
   text-align: center;
   margin: 30px;
@@ -47,10 +54,8 @@ h4,
 p,
 h5,
 a {
-  
   max-width: 1100px;
   margin-inline: auto;
-  
 }
 
 
