--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -31,6 +31,7 @@
   grid-template-columns: repeat(2, 1fr);
   max-width: 1100px;
   margin-inline: auto;
+  padding: 10px;
 }
 
 .overskrift_storkage {
@@ -70,9 +71,11 @@ a {
   text-align: center;
 }
 
-input:focus{
-   outline: 3px solid #c1181c;
+.form_grid_1-1 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
+
 .col {
   width: 50%;
 }
@@ -95,7 +98,7 @@ form {
 }
 
 input {
-    width: 100%;
+  width: 100%;
   border: solid #fce0f9;
   padding: 12px 0;
   background-color: #fffacd;
@@ -104,15 +107,19 @@ input {
 
 select {
   color: #c1181c;
-  width: 100%;
+  
   padding: 12px 20px;
   background-color: #fffacd;
   border: 5px solid #fce0f9;
 }
 
-#emne {
-  width: 100%;
+/*#tel {
+  width: 120%;
 }
+
+#emne {
+  width: 75%;
+}*/
 
 #besked {
   background-color: #fffacd;
@@ -129,6 +136,14 @@ label {
   font-size: 15px;
   color: #c1181c;
   font-family: "Poppins_Regular", sans-serif;
+}
+
+input:focus{
+  outline: 3px solid #c1181c;
+}
+
+#besked:focus {
+ outline: 3px solid #c1181c;
 }
 
 .grid_1-2 {
