--- a/css/forside.css
+++ b/css/forside.css
@@ -39,8 +39,8 @@ section h2 {
   grid-template-columns: 1fr 2fr;
 }
 .grid_1-2 img {
-  height: 100%;
-  width: 60%;
+  height: 320px;
+  width: 300px;
 }
 
 /* Åbningstider */
