form and maxwidth

--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -1,3 +1,19 @@
+main,
+.full {
+  display: grid;
+  grid-template-columns: 1fr minmax(0, 1100px) 1fr;
+}
+
+.full {
+  grid-column: 1/-1;
+}
+
+main > *,
+.full > * {
+  /* main > *, .full > * */
+  grid-column: 2/3;
+}
+
 .top_pic {
   width: 75%;
   margin-left: 190px;
@@ -14,13 +30,7 @@
 .store_kager {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  max-width: 1100px;
-  margin-inline: auto;
 }
-/*.grid_1-1 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}*/
 
 .overskrift_minikager {
   text-align: start;
@@ -29,8 +39,6 @@
 .minikager_1-1 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  max-width: 1100px;
-  margin-inline: auto;
   padding: 10px;
 }
 
@@ -47,18 +55,6 @@
 img {
   margin: 30px;
 }
-
-h1,
-h2,
-h3,
-h4,
-p,
-h5,
-a {
-  max-width: 1100px;
-  margin-inline: auto;
-}
-
 
 .tekst_storkage {
   padding-left: 20px;
@@ -81,7 +77,7 @@ a {
 }
 
 form {
-  width: 100%;
+  width: 80%;
   padding: 10px;
   align-content: flex-start;
 }
@@ -98,7 +94,7 @@ form {
 }
 
 input {
-  width: 100%;
+  width: 75%;
   border: solid #fce0f9;
   padding: 12px 0;
   background-color: #fffacd;
@@ -113,13 +109,13 @@ select {
   border: 5px solid #fce0f9;
 }
 
-/*#tel {
+#tel {
   width: 120%;
 }
 
 #emne {
-  width: 75%;
-}*/
+  width: 91%;
+}
 
 #besked {
   background-color: #fffacd;
@@ -150,3 +146,4 @@ input:focus{
     display: grid;
     grid-template-columns: 1fr 2fr;
 }
+
