--- a/css/bestillinger.css
+++ b/css/bestillinger.css
@@ -14,11 +14,6 @@ main > *,
   grid-column: 2/3;
 }
 
-.top_pic {
-  width: 75%;
-  margin-left: 190px;
-}
-
 .top {
   text-align: center;
 }
@@ -77,7 +72,7 @@ img {
 }
 
 form {
-  width: 80%;
+  width: 100%;
   padding: 10px;
   align-content: flex-start;
 }
@@ -94,7 +89,6 @@ form {
 }
 
 input {
-  width: 75%;
   border: solid #fce0f9;
   padding: 12px 0;
   background-color: #fffacd;
@@ -103,15 +97,12 @@ input {
 
 select {
   color: #c1181c;
-  
   padding: 12px 20px;
   background-color: #fffacd;
   border: 5px solid #fce0f9;
 }
 
-#tel {
-  width: 120%;
-}
+
 
 #emne {
   width: 91%;
@@ -144,6 +135,7 @@ input:focus{
 
 .grid_1-2 {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 100px;
 }
 
