--- a/css/kontakt.css
+++ b/css/kontakt.css
@@ -15,21 +15,20 @@ main > *,
 }
 
 /*kontakt section*/
-
-.grid_kontakt {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+@media (min-width: 800px) {
+  .grid_kontakt {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    margin-bottom: 10%;
+  }
 }
-
 .grid_kontakt .boks {
   border-left: solid #c1181c;
-  margin-bottom: 100px;
 }
 
 .grid_kontakt a {
   place-content: start;
   display: block;
-  padding-block: 10px;
   padding: 10px 0px 10px 10px;
   font-size: 20px;
   color: black;
@@ -57,13 +56,20 @@ main > *,
   padding-block: 5%;
 }
 
+.ios,
+.android {
+  font-weight: bold;
+}
+
 /*Bagt family section*/
 
-.grid_job {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-  padding-block: 60px;
+@media (min-width: 800px) {
+  .grid_job {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    padding-block: 60px;
+  }
 }
 
 .grid_job .boks {
@@ -113,18 +119,88 @@ main > *,
   padding-bottom: 5%;
 }
 
+/*maries*/
+
 .grid_butikker {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 10px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+  gap: var(--space-lg);
+  padding-bottom: var(--space-lg);
+}
+.grid_butikker img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.grid_butikker .boks,
+.boks_helligdag {
+  display: grid;
   place-items: center;
+}
+.grid_butikker .boks img,
+.grid_butikker .boks .ps,
+.boks_helligdag .ps,
+.grid_butikker .boks h3,
+.boks_helligdag h3 {
+  grid-area: 1/1;
+  transition: 0.3s;
+}
+
+.grid_butikker .boks h3,
+.boks_helligdag h3 {
+  font-size: var(--font-lg);
+  color: var(--brand_color);
+  font-family: "Poppins_Medium", sans-serif;
+  text-transform: uppercase;
+  place-items: center;
+  text-align: center;
+}
+
+.grid_butikker .boks p,
+.boks_helligdag p {
+  font-size: var(--font-sm);
+  color: var(--brand_color);
+  font-family: "Poppins_Medium", sans-serif;
+  place-self: center;
+  text-align: center;
+}
+.grid_butikker .boks .ps,
+.boks_helligdag .ps {
+  opacity: 0;
+  z-index: 3;
+}
+.grid_butikker .boks img {
+  opacity: 85%;
+}
+.grid_butikker .boks h3,
+.boks_helligdag h3 {
+  z-index: 3;
+}
+.grid_butikker .boks:hover h3,
+.boks_helligdag:hover h3 {
+  opacity: 0;
+}
+.grid_butikker .boks:hover .ps,
+.boks_helligdag:hover .ps {
+  opacity: 1;
+  display: block;
+}
+
+.grid_butikker .boks:hover img {
+  transform: scale(1.1);
+  opacity: 30%;
+}
+
+.boks_helligdag {
+  background-color: #fce0f9;
 }
 
 .grid_butikker a {
   place-content: start;
   display: inline;
-  color: #c1181c;
-  font-size: 22px;
+  font-size: var(--font-sm);
+  color: var(--brand_color);
   text-decoration: none;
   font-weight: bold;
   font-family: "Poppins_Regular", sans-serif;
@@ -141,7 +217,6 @@ main > *,
 
 .flex_forhandlere .boks {
   width: 280px;
-  aspect-ratio: 1/1;
 }
 
 .flex_forhandlere .boks {
